Fix colleciton util tests